sampdotnethook/a_players.h

int CreatePlayerTextDraw(int playerid, float x, float y, char* text);
void PlayerTextDrawDestroy(int playerid, int text);
void PlayerTextDrawLetterSize(int playerid, int text, float x, float y);
void PlayerTextDrawTextSize(int playerid, int text, float x, float y);
void PlayerTextDrawAlignment(int playerid, int text, int alignment);
void PlayerTextDrawColor(int playerid, int text, int color);
void PlayerTextDrawUseBox(int playerid, int text, int use);
void PlayerTextDrawBoxColor(int playerid, int text, int color);
void PlayerTextDrawSetShadow(int playerid, int text, int size);
void PlayerTextDrawSetOutline(int playerid, int text, int size);
void PlayerTextDrawBackgroundColor(int playerid, int text, int color);
void PlayerTextDrawFont(int playerid, int text, int font);
void PlayerTextDrawSetProportional(int playerid, int text, int set);
void PlayerTextDrawSetSelectable(int playerid, int text, int set);
void PlayerTextDrawShow(int playerid, int text);
void PlayerTextDrawHide(int playerid, int text);
void PlayerTextDrawSetString(int playerid, int text, char* string);
void SetPVarInt(int playerid, char* varname, int int_value);
void GetPVarInt(int playerid, char* varname);
void SetPVarString(int playerid, char* varname, char* string_value);
void GetPVarString(int playerid, char* varname, char* string_return, int len);
void SetPVarFloat(int playerid, char* varname, float float_value);
float GetPVarFloat(int playerid, char* varname);
void DeletePVar(int playerid, char* varname);
int GetPVarsUpperIndex(int playerid);
void GetPVarNameAtIndex(int playerid, int index, char* ret_varname, int ret_len);
int GetPVarType(int playerid, char* varname);
void SetPlayerChatBubble(int playerid, char* text, int color, float drawdistance, int expiretime);
void PutPlayerInVehicle(int playerid, int vehicleid, int seatid);
int GetPlayerVehicleID(int playerid);
int GetPlayerVehicleSeat(int playerid);
void RemovePlayerFromVehicle(int playerid);
void TogglePlayerControllable(int playerid, int toggle);
void PlayerPlaySound(int playerid, int soundid, float x, float y, float z);
void ApplyAnimation(int playerid, char* animlib, char* animname, float fdelta, int loop, int lockx, int locky, int freeze, int time, int forcesync=0);
void ClearAnimations(int playerid, int forcesync=0);
int GetPlayerAnimationIndex(int playerid);
void GetAnimationName(int index, char* animlib, int len1, char* animname, int len2);
int GetPlayerSpecialAction(int playerid);
void SetPlayerSpecialAction(int playerid, int actionid);
void SetPlayerCheckpoint(int playerid, float x, float y, float z, float size);
void DisablePlayerCheckpoint(int playerid);
void SetPlayerRaceCheckpoint(int playerid, int type, float x, float y, float z, float nextx, float nexty, float nextz, float size);
void DisablePlayerRaceCheckpoint(int playerid);
void SetPlayerWorldBounds(int playerid, float x_max, float x_min, float y_max, float y_min);
void SetPlayerMarkerForPlayer(int playerid, int showplayerid, int color);
void ShowPlayerNameTagForPlayer(int playerid, int showplayerid, int show);
void SetPlayerMapIcon(int playerid, int iconid, float x, float y, float z, int markertype, int color, int style=0);
void RemovePlayerMapIcon(int playerid, int iconid);
void AllowPlayerTeleport(int playerid, int allow);
void SetPlayerCameraPos(int playerid, float x, float y, float z);
void SetPlayerCameraLookAt(int playerid, float x, float y, float z, int cut=2);
void SetCameraBehindPlayer(int playerid);
void GetPlayerCameraPos(int playerid, float& x, float& y, float& z);
void GetPlayerCameraFrontVector(int playerid, float& x, float& y, float& z);
int GetPlayerCameraMode(int playerid);
void AttachCameraToObject(int playerid, int objectid);
void AttachCameraToPlayerObject(int playerid, int playerobjectid);
void InterpolateCameraPos(int playerid, float fromx, float fromy, float fromz, float tox, float toy, float toz, int time, int cut=2);
void InterpolateCameraLookAt(int playerid, float fromx, float fromy, float fromz, float tox, float toy, float toz, int time, int cut=2);
int IsPlayerConnected(int playerid);
int IsPlayerInVehicle(int playerid, int vehicleid);
int IsPlayerInAnyVehicle(int playerid);
int IsPlayerInCheckpoint(int playerid);
int IsPlayerInRaceCheckpoint(int playerid);
void SetPlayerVirtualWorld(int playerid, int worldid);
int GetPlayerVirtualWorld(int playerid);
void EnableStuntBonusForPlayer(int playerid, int enable);
void EnableStuntBonusForAll(int enable);
void TogglePlayerSpectating(int playerid, int toggle);
void PlayerSpectatePlayer(int playerid, int targetplayerid, int mode=1);
void PlayerSpectateVehicle(int playerid, int targetvehicleid, int mode=1);
void StartRecordingPlayerData(int playerid, int recordtype, char* recordname);
void StopRecordingPlayerData(int playerid);
void SelectTextDraw(int playerid, int hovercolor);
void CancelSelectTextDraw(int playerid);