sampdotnet/Core/Natives.cs

		
		// Per-player TextDraws
		[DllImport("__Internal", EntryPoint="_samp_CreatePlayerTextDraw")]
		public static extern int CreatePlayerTextDraw(int playerid, float x, float y, string text);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawDestroy")]
		public static extern void PlayerTextDrawDestroy(int playerid, int text);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawLetterSize")]
		public static extern void PlayerTextDrawLetterSize(int playerid, int text, float x, float y);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawTextSize")]
		public static extern void PlayerTextDrawTextSize(int playerid, int text, float x, float y);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawAlignment")]
		public static extern void PlayerTextDrawAlignment(int playerid, int text, int alignment);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawColor")]
		public static extern void PlayerTextDrawColor(int playerid, int text, uint color);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawUseBox")]
		public static extern void PlayerTextDrawUseBox(int playerid, int text, int use);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawBoxColor")]
		public static extern void PlayerTextDrawBoxColor(int playerid, int text, uint color);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawSetShadow")]
		public static extern void PlayerTextDrawSetShadow(int playerid, int text, int size);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawSetOutline")]
		public static extern void PlayerTextDrawSetOutline(int playerid, int text, int size);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawBackgroundColor")]
		public static extern void PlayerTextDrawBackgroundColor(int playerid, int text, uint color);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawFont")]
		public static extern void PlayerTextDrawFont(int playerid, int text, int font);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawSetProportional")]
		public static extern void PlayerTextDrawSetProportional(int playerid, int text, int set);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawSetSelectable")]
		public static extern void PlayerTextDrawSetSelectable(int playerid, int text, int set);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawShow")]
		public static extern void PlayerTextDrawShow(int playerid, int text);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawHide")]
		public static extern void PlayerTextDrawHide(int playerid, int text);
		[DllImport("__Internal", EntryPoint="_samp_PlayerTextDrawSetString")]
		public static extern void PlayerTextDrawSetString(int playerid, int text, string str);
		
		// Per-player variable system(PVars)
		[DllImport("__Internal", EntryPoint="_samp_SetPVarInt")]
		public static extern void SetPVarInt(int playerid, string varname, int int_value);
		[DllImport("__Internal", EntryPoint="_samp_GetPVarInt")]
		public static extern int GetPVarInt(int playerid, string varname);
		[DllImport("__Internal", EntryPoint="_samp_SetPVarString")]
		public static extern void SetPVarString(int playerid, string varname, string string_value);
		[DllImport("__Internal", EntryPoint="_samp_GetPVarString")]
		public static extern void GetPVarString(int playerid, string varname, StringBuilder string_return, int len);
		[DllImport("__Internal", EntryPoint="_samp_SetPVarFloat")]
		public static extern void SetPVarFloat(int playerid, string varname, float float_value);
		[DllImport("__Internal", EntryPoint="_samp_GetPVarFloat")]
		public static extern float GetPVarFloat(int playerid, string varname);
		[DllImport("__Internal", EntryPoint="_samp_DeletePVar")]
		public static extern void DeletePVar(int playerid, string varname);
		[DllImport("__Internal", EntryPoint="_samp_GetPVarsUpperIndex")]
		public static extern int GetPVarsUpperIndex(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetPVarNameAtIndex")]
		public static extern void GetPVarNameAtIndex(int playerid, int index, string ret_varname, int ret_len);
		[DllImport("__Internal", EntryPoint="_samp_GetPVarType")]
		public static extern void GetPVarType(int playerid, string varname);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerChatBubble")]
		public static extern void SetPlayerChatBubble(int playerid, string text, uint color, float drawdistance, int expiretime);
		[DllImport("__Internal", EntryPoint="_samp_PutPlayerInVehicle")]
		public static extern void PutPlayerInVehicle(int playerid, int vehicleid, int seatid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerVehicleID")]
		public static extern int GetPlayerVehicleID(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerVehicleSeat")]
		public static extern int GetPlayerVehicleSeat(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_RemovePlayerFromVehicle")]
		public static extern void RemovePlayerFromVehicle(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_TogglePlayerControllable")]
		public static extern void TogglePlayerControllable(int playerid, int toggle);
		[DllImport("__Internal", EntryPoint="_samp_PlayerPlaySound")]
		public static extern void PlayerPlaySound(int playerid, int soundid, float x, float y, float z);
		[DllImport("__Internal", EntryPoint="_samp_ApplyAnimation")]
		public static extern void ApplyAnimation(int playerid, string animlib, string animname, float fdelta, int loop, int lockx, int locky, int freeze, int time, int forcesync=0);
		[DllImport("__Internal", EntryPoint="_samp_ClearAnimations")]
		public static extern void ClearAnimations(int playerid, int forcesync=0);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerAnimationIndex")]
		public static extern int GetPlayerAnimationIndex(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetAnimationName")]
		public static extern void GetAnimationName(int index, string animlib, int len1, string animname, int len2);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerSpecialAction")]
		public static extern int GetPlayerSpecialAction(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerSpecialAction")]
		public static extern void SetPlayerSpecialAction(int playerid, int actionid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerCheckpoint")]
		public static extern void SetPlayerCheckpoint(int playerid, float x, float y, float z, float size);
		[DllImport("__Internal", EntryPoint="_samp_DisablePlayerCheckpoint")]
		public static extern void DisablePlayerCheckpoint(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerRaceCheckpoint")]
		public static extern void SetPlayerRaceCheckpoint(int playerid, int type, float x, float y, float z, float nextx, float nexty, float nextz, float size);
		[DllImport("__Internal", EntryPoint="_samp_DisablePlayerRaceCheckpoint")]
		public static extern void DisablePlayerRaceCheckpoint(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerWorldBounds")]
		public static extern void SetPlayerWorldBounds(int playerid, float x_max, float x_min, float y_max, float y_min);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerMarkerForPlayer")]
		public static extern void SetPlayerMarkerForPlayer(int playerid, int showplayerid, uint color);
		[DllImport("__Internal", EntryPoint="_samp_ShowPlayerNameTagForPlayer")]
		public static extern void ShowPlayerNameTagForPlayer(int playerid, int showplayerid, int show);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerMapIcon")]
		public static extern void SetPlayerMapIcon(int playerid, int iconid, float x, float y, float z, int markertype, uint color, int style=0);
		[DllImport("__Internal", EntryPoint="_samp_RemovePlayerMapIcon")]
		public static extern void RemovePlayerMapIcon(int playerid, int iconid);
		[DllImport("__Internal", EntryPoint="_samp_AllowPlayerTeleport")]
		public static extern void AllowPlayerTeleport(int playerid, int allow);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerCameraPos")]
		public static extern void SetPlayerCameraPos(int playerid, float x, float y, float z);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerCameraLookAt")]
		public static extern void SetPlayerCameraLookAt(int playerid, float x, float y, float z, int cut=2);
		[DllImport("__Internal", EntryPoint="_samp_SetCameraBehindPlayer")]
		public static extern void SetCameraBehindPlayer(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerCameraPos")]
		public static extern void GetPlayerCameraPos(int playerid, ref float x, ref float y, ref float z);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerCameraFrontVector")]
		public static extern void GetPlayerCameraFrontVector(int playerid, ref float x, ref float y, ref float z);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerCameraMode")]
		public static extern int GetPlayerCameraMode(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_AttachCameraToObject")]
		public static extern void AttachCameraToObject(int playerid, int objectid);
		[DllImport("__Internal", EntryPoint="_samp_AttachCameraToPlayerObject")]
		public static extern void AttachCameraToPlayerObject(int playerid, int playerobjectid);
		[DllImport("__Internal", EntryPoint="_samp_InterpolateCameraPos")]
		public static extern void InterpolateCameraPos(int playerid, float fromx, float fromy, float fromz, float tox, float toy, float toz, int time, int cut=2);
		[DllImport("__Internal", EntryPoint="_samp_InterpolateCameraLookAt")]
		public static extern void InterpolateCameraLookAt(int playerid, float fromx, float fromy, float fromz, float tox, float toy, float toz, int time, int cut=2);
		[DllImport("__Internal", EntryPoint="_samp_IsPlayerConnected")]
		public static extern int IsPlayerConnected(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_IsPlayerInVehicle")]
		public static extern int IsPlayerInVehicle(int playerid, int vehicleid);
		[DllImport("__Internal", EntryPoint="_samp_IsPlayerInAnyVehicle")]
		public static extern int IsPlayerInAnyVehicle(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_IsPlayerInCheckpoint")]
		public static extern int IsPlayerInCheckpoint(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_IsPlayerInRaceCheckpoint")]
		public static extern int IsPlayerInRaceCheckpoint(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerVirtualWorld")]
		public static extern void SetPlayerVirtualWorld(int playerid, int worldid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerVirtualWorld")]
		public static extern int GetPlayerVirtualWorld(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_EnableStuntBonusForPlayer")]
		public static extern void EnableStuntBonusForPlayer(int playerid, int enable);
		[DllImport("__Internal", EntryPoint="_samp_EnableStuntBonusForAll")]
		public static extern void EnableStuntBonusForAll(int enable);
		[DllImport("__Internal", EntryPoint="_samp_TogglePlayerSpectating")]
		public static extern void TogglePlayerSpectating(int playerid, int toggle);
		[DllImport("__Internal", EntryPoint="_samp_PlayerSpectatePlayer")]
		public static extern void PlayerSpectatePlayer(int playerid, int targetplayerid, int mode=1);
		[DllImport("__Internal", EntryPoint="_samp_PlayerSpectateVehicle")]
		public static extern void PlayerSpectateVehicle(int playerid, int targetvehicleid, int mode=1);
		[DllImport("__Internal", EntryPoint="_samp_StartRecordingPlayerData")]
		public static extern void StartRecordingPlayerData(int playerid, int recordtype, string recordname);
		[DllImport("__Internal", EntryPoint="_samp_StopRecordingPlayerData")]
		public static extern void StopRecordingPlayerData(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SelectTextDraw")]
		public static extern void SelectTextDraw(int playerid, int hovercolor);
		[DllImport("__Internal", EntryPoint="_samp_CancelSelectTextDraw")]
		public static extern void CancelSelectTextDraw(int playerid);
		#endregion
